<resources>
    <string name="app_name">Lab-1-a</string>
    <string name="factorization_text">Factorization</string>
    <string name="number_text">Number:</string>
    <string name="a_text">a:</string>
    <string name="b_text">b:</string>
    <string name="result_default_text">(Millis elapsed...)</string>
    <string name="go_button_text">Go !</string>
    <string name="result_label_text">Result time:</string>
</resources>
