<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/factorization_text"
            android:textAlignment="center"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10sp"
            android:layout_marginTop="50dp"
            android:text="@string/number_text"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/number_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10sp"
            android:text="@string/a_text"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/a_text_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:enabled="false"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10sp"
            android:text="@string/b_text"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/b_text_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:enabled="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/result_label_text"
            android:textAlignment="center"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/result_time_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_default_text"
            android:textAlignment="center"
            android:textSize="18sp"
            android:enabled="false"/>

        <Button
            android:id="@+id/go_button"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="25dp"
            android:text="@string/go_button_text" />

    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>